# portfolio-optimiser

./: README.md  pyproject.toml
data/: DGS10.csv
notebooks/: CAPM.ipynb  Portfolio Optimiser.ipynb  PortfolioOptimiserOld.ipynb  Untitled.ipynb  download_data_and_save_to_data_dirc.ipynb
notebooks/.ipynb_checkpoints/: CAPM-checkpoint.ipynb  Portfolio Optimiser-checkpoint.ipynb  download_data_and_save_to_data_dirc-checkpoint.ipynb
src/: Portfolio Optimiser.ipynb  assets_class.py  database_setup_class.py  download_data_and_save_to_df.ipynb  main.py  portfolio_class.py
src/.ipynb_checkpoints/: Portfolio Optimiser-checkpoint.ipynb
