[tool.poetry]
name = "ideal-stock-portfolio"
version = "0.1.0"
description = ""
authors = ["syed-hussain-93 <syed.musharot.hussain@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8.5,<3.11"
pandas = "^1.3.5"
pandas-datareader = "^0.10.0"
matplotlib = "^3.5.1"
numpy = "^1.22.0"
pyportfolioopt = "^1.5.1"
cvxpy = "^1.1.18"
cvxopt = "^1.2.7"
plotly = "^5.5.0"
yfinance = "^0.1.69"
scipy = "^1.7.3"
streamlit = "^1.4.0"
Yahoo-ticker-downloader = "^3.0.1"
SQLAlchemy = "^1.4.29"
statsmodels = "^0.13.1"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
